--- a/PyCitySchools/PyCitySchools_starter.ipynb
+++ b/PyCitySchools/PyCitySchools_starter.ipynb
@@ -7,14 +7,8 @@
     "#Analysis-\n",
     "\n",
     "*District has total of 15 schools with 39170 students overall and collective budget of $24649428\n",
-    "*Cabbera, Thomas, Griffin, Pena and Wilson (school type-Charter) are Top performimng schools in the District\n",
-    "*Whereas Rodriguez,Figueroa,Huang,Johnson and Ford (school type- \n",
-    "\n",
-    " High School\tDistrict\t3999\t2547363\t637.0\t76.842711\t80.744686\t66.37%\t80.22%\t73.29%\n",
-    "1\t High School\tDistrict\t2949\t1884411\t639.0\t76.711767\t81.158020\t65.99%\t80.74%\t73.36%\n",
-    "2\tHigh School\tDistrict\t2917\t1910635\t655.0\t76.629414\t81.182722\t65.68%\t81.32%\t73.50%\n",
-    "3\tHigh School\tDistrict\t4761\t3094650\t650.0\t77.072464\t80.966394\t66.06%\t81.22%\t73.64%\n",
-    "4\t High School"
+    "*Cabbera, Thomas, Griffin, Pena and Wilson (school type-Charter) are Top performimng schools in the District based on overall passing rate\n",
+    "*Whereas Rodriguez,Figueroa,Huang,Johnson and Ford (school type- district) are bottom 5 in ranking in the District based on  overall passing rate"
    ]
   },
   {
